# OpenMnemex

./: .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
commands/: mnx-capture.md  mnx-doctor.md  mnx-gc.md  mnx-init.md  mnx-promote.md  mnx-read.md  mnx-status.md  mnx-write.md
config/: mnemex.config.md
docs/: 00-overview.md  01-rationale-and-concepts.md  02-architecture.md  03-data-model-and-schemas.md  04-skills-commands-hooks.md  05-maintenance-pass-algorithm.md  06-script-contracts.md  07-configuration.md  08-invariants-and-failure-modes.md  09-appendix-glossary-acronyms.md  10-binding-and-graph-sync.md  11-staging-and-promotion.md  12-user-journey.md  13-multi-graph-and-team-routing.md  14-freshness-and-revalidation.md  agent-setup.md  appendix-glossary-acronyms.md  architecture.md  binding-and-graph-sync.md  configuration.md  console.md  corpus-ingestion.md  data-model-and-schemas.md  freshness-and-revalidation.md  index.html  invariants-and-failure-modes.md  link-reconciliation.md  maintenance-pass-algorithm.md  multi-graph-and-team-routing.md  overview.md  rationale-and-concepts.md  script-contracts.md  skills-commands-hooks.md  staging-and-promotion.md  user-journey.md  viewer.md
hooks/: hooks.json
scripts/: __init__.py  mnx_binding.py  mnx_common.py  mnx_compact.py  mnx_config.py  mnx_decay.py  mnx_doctor.py  mnx_er.py  mnx_glean.py  mnx_hooks.py  mnx_index.py  mnx_ingest.py  mnx_init.py  mnx_install.py  mnx_lock.py  mnx_mcp.py  mnx_mesh.py  mnx_node.py  mnx_phonebook.py  mnx_procedures.py  mnx_promote.py  mnx_read.py  mnx_regen.py  mnx_resolve.py  mnx_serve.py  mnx_simindex.py  mnx_stage.py  mnx_stamp.py  mnx_status.py
skills/mnx-capture/: SKILL.md
skills/mnx-config/: SKILL.md
skills/mnx-consolidate/: SKILL.md
skills/mnx-doctor/: SKILL.md
skills/mnx-gc/: SKILL.md
skills/mnx-ingest/: SKILL.md
skills/mnx-init/: SKILL.md
skills/mnx-promote/: SKILL.md
skills/mnx-read/: SKILL.md
skills/mnx-status/: SKILL.md
skills/mnx-write/: SKILL.md
templates/: binding.template.md  gitattributes.template  gitignore.template  index.template.md  node.template.md  registry.template.md  user-config.template.md
templates/procedures/: capture.core.md  curate.core.md  promote.core.md  read.core.md
templates/procedures/fragments/_digests/: capture.md  promote.md  read.md
templates/procedures/fragments/capture/: capture_add.claude.md  capture_add.mcp.md  capture_drop_flag2.claude.md  capture_drop_flag2.mcp.md  capture_status_budget.claude.md  capture_status_budget.mcp.md  capture_status_list.claude.md  capture_status_list.mcp.md  glean_step.claude.md  glean_step.mcp.md  init.claude.md  init.mcp.md  promote.claude.md  promote.mcp.md
templates/procedures/fragments/curate/: capture_discard_all.claude.md  capture_discard_all.mcp.md  capture_drop.claude.md  capture_drop.mcp.md  capture_status_inline.claude.md  capture_status_inline.mcp.md  status.claude.md  trigger_condition.claude.md  trigger_condition.mcp.md
templates/procedures/fragments/promote/: bulk_mode.claude.md  bulk_mode.mcp.md  consolidate_invoke.claude.md  consolidate_invoke.mcp.md  preflight.claude.md  preflight.mcp.md  retry_push.claude.md  retry_push.mcp.md  step1_flush.claude.md  step1_flush.mcp.md  step5_apply.claude.md  step5_apply.mcp.md
templates/procedures/fragments/read/: bind_status.claude.md  bind_status.mcp.md  capture.claude.md  capture.mcp.md  promote.mcp.md  read_cluster.claude.md  read_cluster.mcp.md  read_frontier.claude.md  read_frontier.mcp.md  read_nodes.claude.md  read_nodes.mcp.md  record_usage_revalidated.claude.md  record_usage_revalidated.mcp.md  record_usage_role.claude.md  record_usage_role.mcp.md
viewer/static/: index.html
viewer/static/css/: app.css  theme.css
viewer/static/js/: api.js  app.js  canvas.js  router.js  search.js  theme.js  ui.js
viewer/static/js/views/: atom.js  chooser.js  config.js  connections.js  graph.js  health.js  inspector.js  queue.js
