[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openmnemex"
# Single-sourced with .claude-plugin/plugin.json "version" — a test asserts they match
# (tests/test_packaging_imports.py::test_pyproject_version_matches_plugin_manifest).
version = "0.1.0"
description = "OpenMnemex Context Graph — a self-pruning, human-memory-modeled knowledge context graph for AI agents. Markdown in git; no server, no database, no vector store."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kriti" }]
keywords = [
  "agent-memory",
  "llm-memory",
  "long-term-memory",
  "ai-agents",
  "knowledge-graph",
  "context-graph",
  "context-engineering",
  "self-pruning",
  "claude-code",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# The MCP stdio server (multi-agent plan v2 §5, Phase 1). The official MCP SDK needs
# Python 3.10+; the engine keeps its 3.9 floor, so the extra is version-gated and no
# module outside the future scripts/mnx_mcp.py may import it (guarded by
# tests/test_packaging_imports.py::test_engine_never_imports_mcp_sdk).
mcp = ["mcp>=1.2.0; python_version >= '3.10'"]

[project.urls]
Homepage = "https://github.com/kritird/OpenMnemex"
Repository = "https://github.com/kritird/OpenMnemex"
Issues = "https://github.com/kritird/OpenMnemex/issues"

[tool.setuptools]
# The flat scripts/ engine IS the package: one directory, two import contexts — see
# scripts/__init__.py (the bridge). Console entry points arrive with the modules they
# run (openmnemex-mcp in Phase 1, the installer CLI in Phase 5); templates/ ships as
# package data in Phase 5 (plan v2 §7, commit 5c).
packages = ["openmnemex"]

[tool.setuptools.package-dir]
openmnemex = "scripts"
