[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openmnemex"
# Single-sourced with .claude-plugin/plugin.json "version" — a test asserts they match
# (tests/test_packaging_imports.py::test_pyproject_version_matches_plugin_manifest).
version = "0.1.0"
description = "OpenMnemex Context Graph — a self-pruning, human-memory-modeled knowledge context graph for AI agents. Markdown in git; no server, no database, no vector store."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kriti" }]
keywords = [
  "agent-memory",
  "llm-memory",
  "long-term-memory",
  "ai-agents",
  "knowledge-graph",
  "context-graph",
  "context-engineering",
  "self-pruning",
  "claude-code",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# The MCP stdio server (multi-agent plan v2 §5, Phase 1). The official MCP SDK needs
# Python 3.10+; the engine keeps its 3.9 floor, so the extra is version-gated and no
# module outside the future scripts/mnx_mcp.py may import it (guarded by
# tests/test_packaging_imports.py::test_engine_never_imports_mcp_sdk).
mcp = ["mcp>=1.2.0; python_version >= '3.10'"]
# The local view-only web viewer (`mnx serve`, viewer plan V1.1). Same pattern as [mcp]:
# core stays dependency-free; scripts/mnx_serve.py soft-imports these and the console
# script exits 1 with the install hint when they are missing.
viewer = ["fastapi>=0.110", "uvicorn>=0.23"]

[project.scripts]
# The stdio MCP server (plan v2 Phase 1, commit 1a). Installed unconditionally but the
# server itself needs the [mcp] extra — without it the binary exits 1 with the install
# hint instead of a missing-command error.
openmnemex-mcp = "openmnemex.mnx_mcp:main"
# The per-agent installer (plan v2 §7 Phase 5, commit 5a). Needs no extras — it only
# writes config files / shells out to each agent's own CLI. Also fronts the viewer:
# `openmnemex serve` delegates to mnx_serve (viewer plan J1: `uvx openmnemex serve`).
openmnemex = "openmnemex.mnx_install:main"
# The local view-only viewer (viewer plan V1.1). Installed unconditionally but the server
# needs the [viewer] extra — without it the binary exits 1 with the install hint.
openmnemex-serve = "openmnemex.mnx_serve:main"

[project.urls]
Homepage = "https://github.com/kritird/OpenMnemex"
Repository = "https://github.com/kritird/OpenMnemex"
Issues = "https://github.com/kritird/OpenMnemex/issues"

[tool.setuptools]
# The flat scripts/ engine IS the package: one directory, two import contexts — see
# scripts/__init__.py (the bridge). Console entry points arrive with the modules they
# run (openmnemex-mcp landed with Phase 1, the installer CLI comes in Phase 5).
#
# config/, templates/, and integrations/opencode/ stay at the repo root (not moved under
# scripts/) because the Claude Code plugin surface reads them checkout-relative via
# ${CLAUDE_PLUGIN_ROOT}/config/... (skills/mnx-init/SKILL.md and others) — moving them would
# break that surface. Instead they're *also* declared here as three namespace subpackages
# (openmnemex.data.*) purely so a real `pip`/`uvx` install (no checkout) ships a copy inside
# the wheel; mnx_common.repo_data_dir() (plan v2 §7, commit 5c) prefers the checkout-relative
# path when present and falls back to this bundled copy via importlib.resources otherwise.
# No __init__.py needed anywhere: `openmnemex` itself is a regular package (scripts/__init__.py)
# but `data` and its children are left as implicit PEP 420 namespace packages — pure data,
# never imported as code, so there's nothing an __init__.py would buy.
packages = [
  "openmnemex",
  "openmnemex.data.config",
  "openmnemex.data.templates",
  "openmnemex.data.integrations.opencode",
  "openmnemex.data.viewer",
]

[tool.setuptools.package-dir]
openmnemex = "scripts"
"openmnemex.data.config" = "config"
"openmnemex.data.templates" = "templates"
"openmnemex.data.integrations.opencode" = "integrations/opencode"
# The SPA frontend (viewer plan V1.2): mnx_common.viewer_static_dir() prefers the
# checkout-relative viewer/static/ and falls back to this bundled copy in a wheel.
"openmnemex.data.viewer" = "viewer/static"

[tool.setuptools.package-data]
"openmnemex.data.config" = ["*"]
"openmnemex.data.templates" = ["**/*"]
"openmnemex.data.integrations.opencode" = ["*"]
"openmnemex.data.viewer" = ["**/*"]
