[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openmnemex"
# Single-sourced with .claude-plugin/plugin.json "version" — a test asserts they match
# (tests/test_packaging_imports.py::test_pyproject_version_matches_plugin_manifest).
version = "0.2.0"
description = "OpenMnemex Context Graph — a self-pruning, human-memory-modeled knowledge context graph for AI agents. Markdown in git; no server, no database, no vector store."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kriti" }]
keywords = [
  "agent-memory",
  "llm-memory",
  "long-term-memory",
  "ai-agents",
  "knowledge-graph",
  "context-graph",
  "context-engineering",
  "self-pruning",
  "claude-code",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
# FastAPI + uvicorn are CORE, not an extra (Kriti decision 2026-07-20): the viewer is the
# front door of the user journey, so `pip install openmnemex` / bare `uvx openmnemex` must
# be enough to open it — no bracket incantation. mnx_serve.py still soft-imports them and
# degrades to a hint rather than a stack trace if an env somehow lacks them.
dependencies = ["pyyaml>=6.0", "fastapi>=0.110", "uvicorn>=0.23"]

[project.optional-dependencies]
# The MCP stdio server (multi-agent plan v2 §5, Phase 1). The official MCP SDK needs
# Python 3.10+; the engine keeps its 3.9 floor, so the extra is version-gated and no
# module outside the future scripts/mnx_mcp.py may import it (guarded by
# tests/test_packaging_imports.py::test_engine_never_imports_mcp_sdk).
mcp = ["mcp>=1.2.0; python_version >= '3.10'"]
# Back-compat alias only: the viewer deps moved into core dependencies above, but
# published docs/commands used `openmnemex[viewer]` — keep the name resolving.
viewer = []

[project.scripts]
# The stdio MCP server (plan v2 Phase 1, commit 1a). Installed unconditionally but the
# server itself needs the [mcp] extra — without it the binary exits 1 with the install
# hint instead of a missing-command error.
openmnemex-mcp = "openmnemex.mnx_mcp:main"
# The main command (plan v2 §7 Phase 5, commit 5a). Bare invocation opens the Console
# (the journey's front door — Kriti decision 2026-07-20); `console`/`serve` do the same
# explicitly and `install --agent …` is the scriptable per-agent installer the Console's
# Connect button also drives.
openmnemex = "openmnemex.mnx_install:main"
# Explicit Console binary (renamed from openmnemex-serve pre-publication — the PyPI
# 0.1.0 release predates the Console entirely, so nothing shipped under the old name).
openmnemex-console = "openmnemex.mnx_serve:main"

[project.urls]
Homepage = "https://github.com/kritird/OpenMnemex"
Repository = "https://github.com/kritird/OpenMnemex"
Issues = "https://github.com/kritird/OpenMnemex/issues"

[tool.setuptools]
# The flat scripts/ engine IS the package: one directory, two import contexts — see
# scripts/__init__.py (the bridge). Console entry points arrive with the modules they
# run (openmnemex-mcp landed with Phase 1, the installer CLI comes in Phase 5).
#
# config/, templates/, and integrations/opencode/ stay at the repo root (not moved under
# scripts/) because the Claude Code plugin surface reads them checkout-relative via
# ${CLAUDE_PLUGIN_ROOT}/config/... (skills/mnx-init/SKILL.md and others) — moving them would
# break that surface. Instead they're *also* declared here as three namespace subpackages
# (openmnemex.data.*) purely so a real `pip`/`uvx` install (no checkout) ships a copy inside
# the wheel; mnx_common.repo_data_dir() (plan v2 §7, commit 5c) prefers the checkout-relative
# path when present and falls back to this bundled copy via importlib.resources otherwise.
# No __init__.py needed anywhere: `openmnemex` itself is a regular package (scripts/__init__.py)
# but `data` and its children are left as implicit PEP 420 namespace packages — pure data,
# never imported as code, so there's nothing an __init__.py would buy.
packages = [
  "openmnemex",
  "openmnemex.data.config",
  "openmnemex.data.templates",
  "openmnemex.data.integrations.opencode",
  "openmnemex.data.viewer",
]

[tool.setuptools.package-dir]
openmnemex = "scripts"
"openmnemex.data.config" = "config"
"openmnemex.data.templates" = "templates"
"openmnemex.data.integrations.opencode" = "integrations/opencode"
# The SPA frontend (viewer plan V1.2): mnx_common.viewer_static_dir() prefers the
# checkout-relative viewer/static/ and falls back to this bundled copy in a wheel.
"openmnemex.data.viewer" = "viewer/static"

[tool.setuptools.package-data]
"openmnemex.data.config" = ["*"]
"openmnemex.data.templates" = ["**/*"]
"openmnemex.data.integrations.opencode" = ["*"]
"openmnemex.data.viewer" = ["**/*"]
